--- a/sample.vcxproj
+++ b/sample.vcxproj
@@ -125,7 +125,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="collision.h" />
-
+    <ClInclude Include="defenseobj.h" />
     <ClInclude Include="obj.h" />
     <ClInclude Include="obstacle.h" />
     <ClInclude Include="planePolygon.h" />
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="collision.cpp" />
+    <ClCompile Include="defenseobj.cpp" />
     <ClCompile Include="obstacle.cpp" />
     <ClCompile Include="planePolygon.cpp" />
     <ClCompile Include="camera.cpp" />
