--- a/sample.vcxproj
+++ b/sample.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="collsionpoly.h" />
     <ClInclude Include="defenseobj.h" />
     <ClInclude Include="enemy.h" />
+    <ClInclude Include="judgment frame.h" />
+    <ClInclude Include="notes.h" />
+    <ClInclude Include="notesjudge.h" />
     <ClInclude Include="obj.h" />
     <ClInclude Include="obstacle.h" />
     <ClInclude Include="planePolygon.h" />
@@ -163,6 +166,9 @@
     <ClCompile Include="collsionpoly.cpp" />
     <ClCompile Include="defenseobj.cpp" />
     <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="judgment frame.cpp" />
+    <ClCompile Include="notesjudge.cpp" />
+    <ClCompile Include="notes.cpp" />
     <ClCompile Include="obstacle.cpp" />
     <ClCompile Include="planePolygon.cpp" />
     <ClCompile Include="camera.cpp" />
